--- a/src/static_in_project/static_root/css/custom.css
+++ b/src/static_in_project/static_root/css/custom.css
@@ -7,6 +7,32 @@
   background-color: white;
 }
 
+.main-container {
+  min-height: 950px;
+  background-color: #FFF;
+  border-radius: 0px 0px 10px 10px;
+  padding-bottom: 30px;
+}
+
+body {
+  background-color: #F8F8F8;
+}
+
+.footer {
+  background-color: #F8F8F8;
+  min-height: 50px;
+  padding: 20px 0px;
+  /*text-align: center;*/
+  margin-top:0px
+}
+
+.footer img {
+  width: 80px;
+  margin: 5px;
+}
+
+
+
 .list-group-item .badge {
   margin-top: 3px;
   color: #FFF;
