--- a/src/templates/navbar-fixed.html
+++ b/src/templates/navbar-fixed.html
@@ -64,13 +64,13 @@
       </div> -->
 
       <ul class="nav navbar-nav navbar-right">
-
         {% if request.user.is_authenticated %}
         <li class="dropdown">
           <a href="#" class="dropdown-toggle notification-toggle" data-toggle="dropdown"
             role="button" aria-haspopup="true" aria-expanded="false">
             <i class="fa fa-inbox"></i>&nbsp;
-            <span id="notification_badge" class="badge"></span></a>
+            <span id="notification_badge" class="badge alert-danger"></span>
+          </a>
           <ul class="dropdown-menu" id="notification_dropdown">
           </ul>
         </li>
