Announcements unread badge

--- a/src/templates/navbar-fixed.html
+++ b/src/templates/navbar-fixed.html
@@ -68,8 +68,8 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle notification-toggle" data-toggle="dropdown"
             role="button" aria-haspopup="true" aria-expanded="false">
-            <i class="fa fa-inbox"></i>&nbsp;
             <span id="notification_badge" class="badge alert-danger"></span>
+            &nbsp;<i class="fa fa-inbox"></i>
           </a>
           <ul class="dropdown-menu" id="notification_dropdown">
           </ul>
