--- a/src/templates/javascript.html
+++ b/src/templates/javascript.html
@@ -35,9 +35,18 @@
         },
         success: function(data){
           var count = data.count;
-          console.log(count);
           if(count!=0) {
             $("#notification_badge").html(count);
+            var announcements_count = 0;
+            $(data.notifications).each(function(){
+              var link = this;
+              if (this.indexOf("announcements")) {
+                announcements_count++;
+              }
+            })
+            if(announcements_count!=0) {
+              $("#announcements-badge").html(announcements_count);
+            }
           }
         }
       });
