--- a/src/templates/sidebar.html
+++ b/src/templates/sidebar.html
@@ -27,7 +27,7 @@
         <i class="fa fa-newspaper-o fa-fw"></i>&nbsp;
         <span class="visible-sm-inline visible-xs-inline visible-md-inline shrinktextmore">Announce...</span>
         <span class="hidden-sm hidden-xs hidden-md">Announcements</span>
-        <span class="badge alert-danger list-group-item-badge ">57</span>
+        <span id="announcements-badge" class="badge alert-danger list-group-item-badge "></span>
       </a>
   </div>
 
