--- a/src/announcements/templates/announcements/form.html
+++ b/src/announcements/templates/announcements/form.html
@@ -13,6 +13,8 @@
 
 {% block content %}
 <form action="{{ action_value }}" method="post">{% csrf_token %}
+  <a href="{% url 'announcements:list' %}" role="button" class="btn btn-danger">Cancel</a>
+  <input type="submit" value="{{ submit_btn_value }}" class="btn btn-success" />
   {{ form|crispy }}
   <a href="{% url 'announcements:list' %}" role="button" class="btn btn-danger">Cancel</a>
   <input type="submit" value="{{ submit_btn_value }}" class="btn btn-success" />
