--- a/src/quest_manager/templates/quest_manager/quest_form.html
+++ b/src/quest_manager/templates/quest_manager/quest_form.html
@@ -14,6 +14,8 @@
 
 {% block content %}
 <form action="{{ action_value }}" method="post">{% csrf_token %}
+  <a href="{% url 'quests:quests' %}" role="button" class="btn btn-danger">Cancel</a>
+  <input type="submit" value="{{ submit_btn_value }}" class="btn btn-success" />
   {{ form|crispy }}
   <a href="{% url 'quests:quests' %}" role="button" class="btn btn-danger">Cancel</a>
   <input type="submit" value="{{ submit_btn_value }}" class="btn btn-success" />
