--- a/src/templates/sidebar.html
+++ b/src/templates/sidebar.html
@@ -3,14 +3,15 @@
 
 <!-- sidebar -->
 
-
+<div id="sidebar_menu">
   <ul class="nav">
     <li><a href="#" data-toggle="offcanvas" class="visible-xs text-center"><i class="fa fa-chevron-right fa-fw"></i></a></li>
   </ul>
 
-   <h3 class="hidden-xs"> <!--so logo margins align with main div headings-->
+    <!--so logo margins align with main div headings-->
+   <!-- <h3 class="hidden-xs"> 
     <img id="logo" src ="{% static 'img/banner.png' %}"  class="img-responsive" alt="Timberline's Digital Hackerspace Logo" />
-  </h3>
+  </h3> -->
   <div class="nav list-group hidden-xs" id="lg-menu">
       <a class="list-group-item {% if '/quests/' in request.path_info %}active{% endif %}" href="{% url 'quests:quests' %}">
         <i class="fa fa-shield fa-fw"></i>&nbsp; Quests
@@ -44,5 +45,6 @@
         <li><a href="{% url 'profiles:profile_list' %}"><i class="fa fa-users fa-fw"></i></a></li>
         <li><a href="#" class="text-center"><i class="fa fa-newspaper-o fa-fw"></i></a></li>
     </ul>
+</div>
 
 <!-- /sidebar -->
