--- a/src/quest_manager/templates/quest_manager/quests.html
+++ b/src/quest_manager/templates/quest_manager/quests.html
@@ -1,16 +1,14 @@
 {% extends "base_sidebar.html" %}
 {% load crispy_forms_tags %}
-{% load staticfiles %}
 
 {% block head_title%}{% if title %}{{ title }} | {% endif %}{% endblock%}
 
-{% block heading %}{{ heading }}
-{% if request.user.is_authenticated and request.user.is_staff %}
-  <a class="btn btn-primary" href="{% url 'quests:quest_create' %}" role="button">New</a>
-{% endif %}
-
- <i class="fa fa-shield pull-right"></i>
- {% endblock %}
+{% block heading_inner %} {{ heading }}
+  {% if request.user.is_authenticated and request.user.is_staff %}
+    <a class="btn btn-primary" href="{% url 'quests:quest_create' %}" role="button">New</a>
+  {% endif %}
+   <i class="fa fa-shield pull-right"></i>
+{% endblock %}
 
 {% block content %}
 
@@ -37,7 +35,5 @@
     {% include 'quest_manager/quests_completed_tab.html' %}
   </div>
 </div>
-
-
 
 {% endblock %}
