--- a/src/templates/javascript.html
+++ b/src/templates/javascript.html
@@ -27,14 +27,14 @@
 
     $(document).ready(function() {
       //attempt to fix left menu
-      $('#sidebar_menu').affix({
-        offset: {
-          top: 100,
-          // bottom: function () {
-          //   return (this.bottom = $('.footer').outerHeight(true))
-          // }
-        }
-      });
+      // $('#sidebar_menu').affix({
+      //   offset: {
+      //     top: 100,
+      //     // bottom: function () {
+      //     //   return (this.bottom = $('.footer').outerHeight(true))
+      //     // }
+      //   }
+      // });
 
       //Update badge to show number of new Notifications
       $.ajax({
