--- a/src/quest_manager/templates/quest_manager/detail.html
+++ b/src/quest_manager/templates/quest_manager/detail.html
@@ -10,12 +10,9 @@
 {% block heading_inner %} {{ heading }}{% endblock %}
 
 {% block content %}
-  {% if qs.is_started %}
-    <a class="btn btn-danger pull-right" href="{% url 'quests:quest_detail' q.id %}" role="button">Drop</a>
-    <a class="btn btn-primary pull-right" href="#" role="button">Complete</a>
-  {% else %}
-    <a class="btn btn-primary pull-right" href="{% url 'quests:start' q.id %}" role="button">Start Quest</a>
-  {% endif %}
+  {% with no_details=True %}
+    {% include "quest_manager/buttons.html" %}
+  {% endwith %}
   {{ q.instructions | safe }}
   <!-- {% if q.tags.all %}
   <div>
@@ -26,45 +23,48 @@
     <ul>
   </div>
   {% endif %} -->
+  {% with no_details=True %}
+    {% include "quest_manager/buttons.html" %}
+  {% endwith %}
 
-  <hr />
-  <h3>Comments</h3>
-  <form method="POST" action="{% url 'comments:create' %}">{% csrf_token %}
-    {{ comment_form | crispy }}
-    <input type='hidden' name = 'quest_id' value='{{q.id}}' />
-    <input type='hidden' name = 'origin_path' value='{{request.get_full_path}}' />
-    <input type='submit' class='btn btn-primary' value='Add comment' />
-  </form>
-  <p>
-    <ul class="list-group">
-    {% for comment in comments %}
-      <li class="list-group-item">"{{comment.text}}" <small>-{{comment.user}} | {{comment.timestamp|timesince}} ago</small>
-        {% if not comment.is_child %}
-        <div class="pull-right">
-          <a href='#' class='reply_btn btn btn-default btn-sm'>Reply</a>
-          <a href='{{comment.get_absolute_url}}' class='btn btn-default btn-sm'>View Thread</a>
-        </div>
-          <p><br />
-            <ul class="list-group">
-              {% for child in comment.get_children %}
-                <li class="list-group-item">"{{child.text}}" <small>-{{child.user}}</small></li>
-              {% endfor %}
-            </ul>
-          </p>
-          <div class='reply_comment'>
-            <form method="POST" action="{% url 'comments:create' %}">{% csrf_token %}
-              {{ comment_form | crispy }}
-              <input type='hidden' name='parent_id' value='{{comment.id}}'>
-              <input type='hidden' name = 'quest_id' value='{{q.id}}' />
-              <input type='hidden' name = 'origin_path' value='{{comment.get_origin}}' />
-              <input type='submit' class='btn btn-primary' value='Add reply' />
-            </form>
+    <hr />
+    <h3>Comments</h3>
+    <form method="POST" action="{% url 'comments:create' %}">{% csrf_token %}
+      {{ comment_form | crispy }}
+      <input type='hidden' name = 'quest_id' value='{{q.id}}' />
+      <input type='hidden' name = 'origin_path' value='{{request.get_full_path}}' />
+      <input type='submit' class='btn btn-primary' value='Add comment' />
+    </form>
+    <p>
+      <ul class="list-group">
+      {% for comment in comments %}
+        <li class="list-group-item">"{{comment.text}}" <small>-{{comment.user}} | {{comment.timestamp|timesince}} ago</small>
+          {% if not comment.is_child %}
+          <div class="pull-right">
+            <a href='#' class='reply_btn btn btn-default btn-sm'>Reply</a>
+            <a href='{{comment.get_absolute_url}}' class='btn btn-default btn-sm'>View Thread</a>
           </div>
-        {% endif %}
-      </li>
-    {% endfor %}
-    </ul>
-  </p>
+            <p><br />
+              <ul class="list-group">
+                {% for child in comment.get_children %}
+                  <li class="list-group-item">"{{child.text}}" <small>-{{child.user}}</small></li>
+                {% endfor %}
+              </ul>
+            </p>
+            <div class='reply_comment'>
+              <form method="POST" action="{% url 'comments:create' %}">{% csrf_token %}
+                {{ comment_form | crispy }}
+                <input type='hidden' name='parent_id' value='{{comment.id}}'>
+                <input type='hidden' name = 'quest_id' value='{{q.id}}' />
+                <input type='hidden' name = 'origin_path' value='{{comment.get_origin}}' />
+                <input type='submit' class='btn btn-primary' value='Add reply' />
+              </form>
+            </div>
+          {% endif %}
+        </li>
+      {% endfor %}
+      </ul>
+    </p>
 
 
 {% endblock %}
