basic completed quests tab

--- a/src/quest_manager/templates/quest_manager/quests_completed_tab.html
+++ b/src/quest_manager/templates/quest_manager/quests_completed_tab.html
@@ -1,5 +1,5 @@
 
-  {% if quest_list %}
+  {% if completed_submissions %}
 
   <table data-toggle="table"
           data-classes="table table-hover"
@@ -20,28 +20,20 @@
        </tr>
       </thead>
       <tbody>
-      {% for q in quest_list %}
+      {% for s in completed_submissions %}
       <tr>
-        <td data-field="icon"><img class="media-object" src="{{ q.icon_url|default_if_none:'#' }}" alt="icon" height="45px"/></td>
-        <td data-field="name">{{q.name}}</td>
-        <td data-field="xp" >{{q.xp}}</td>
-        <td data-field="time" >{{q.id}}</td>
-        <td data-field="category" >{{q.category}}</td>
+        <td data-field="icon"><img class="media-object" src="{{ s.quest.icon_url|default_if_none:'#' }}" alt="icon" height="45px"/></td>
+        <td data-field="name">{{s.quest.name}}</td>
+        <td data-field="xp" >{{s.quest.xp}}</td>
+        <td data-field="time" >{{s.quest.id}}</td>
+        <td data-field="category" >{{s.quest.category}}</td>
         <td data-field="short_description">
           <div>
-             {{q.short_description}}
+             {{s.quest.short_description}}
           </div>
           <div class="pull-right">
-            <a class="btn btn-info" href="{% url 'quests:quest_detail' q.id %}" role="button">View Details</a>
-            <a class="btn btn-primary" href="{% url 'quests:start' q.id %}" role="button">Start Quest</a>
+            <a class="btn btn-info" href="{% url 'quests:quest_detail' s.quest.id %}" role="button">View Details</a>
           </div>
-          {% if request.user.is_staff %}
-          <div>
-            <a class="btn btn-danger" href="/admin/quest_manager/quest/{{q.id}}/delete/" role="button">Delete</a>
-            <a class="btn btn-info" href="/admin/quest_manager/quest/{{q.id}}" role="button">Edit</a>
-            <a class="btn btn-warning" href="{% url 'quests:quest_copy' q.id %}" role="button">Copy</a>
-          </div>
-          {% endif %}
         </td>
      </tr>
      {% endfor %}
@@ -49,5 +41,5 @@
    </table>
 
   {% else %}
-    <p>No quests completed yet!</p>
+    <p>You have not completed any quests yet!</p>
   {% endif %}
