--- a/src/quest_manager/templates/quest_manager/quests.html
+++ b/src/quest_manager/templates/quest_manager/quests.html
@@ -1,13 +1,10 @@
-{% extends "base_sidebar.html" %}
+{% extends "quest_manager/base.html" %}
 {% load crispy_forms_tags %}
 
-{% block head_title%}{% if title %}{{ title }} | {% endif %}{% endblock%}
-
 {% block heading_inner %} {{ heading }}
-  {% if request.user.is_authenticated and request.user.is_staff %}
+  {% if request.user.is_staff %}
     <a class="btn btn-primary" href="{% url 'quests:quest_create' %}" role="button">New</a>
   {% endif %}
-   <i class="fa fa-shield pull-right"></i>
 {% endblock %}
 
 {% block content %}
