--- a/src/quest_manager/templates/quest_manager/quests_completed_tab.html
+++ b/src/quest_manager/templates/quest_manager/quests_completed_tab.html
@@ -32,7 +32,7 @@
              {{s.quest.short_description}}
           </div>
           <div class="pull-right">
-            <a class="btn btn-info" href="{% url 'quests:quest_detail' s.quest.id %}" role="button">View Details</a>
+            <a class="btn btn-info" href="{% url 'quests:submission' s.id %}" role="button">View Details</a>
           </div>
         </td>
      </tr>
