--- a/src/quest_manager/templates/quest_manager/submission.html
+++ b/src/quest_manager/templates/quest_manager/submission.html
@@ -5,10 +5,12 @@
 
 {% block content %}
 
+{% if not submission.is_completed %}
   <div class="pull-right">
       <a class="btn btn-danger" href="{% url 'quests:drop' submission.id %}" role="button">Drop</a>
       <a class="btn btn-primary" href="{% url 'quests:complete' submission.id %}" role="button">Complete</a>
   </div>
+{% endif %}
 
   {{ submission.quest.instructions | safe }}
 
