Comment app converted to generic target Model

--- a/src/comments/templates/comments/comment_thread.html
+++ b/src/comments/templates/comments/comment_thread.html
@@ -1,5 +1,6 @@
 {% extends "comments/base.html" %}
 {% load crispy_forms_tags %}
+{% load comment_tags %}
 
 {% block heading_inner %} {{ heading }}
   <a class="btn btn-info" href="{{comment.get_origin}}" role="button">Back</a>
