--- a/src/quest_manager/templates/quest_manager/comments.html
+++ b/src/quest_manager/templates/quest_manager/comments.html
@@ -5,11 +5,10 @@
 <h3>Comments</h3>
 <form method="POST" action="{% url 'comments:create' %}">{% csrf_token %}
   {{ comment_form | crispy }}
-  {% with q|content_type as ctype %}
+  {% with target|content_type as ctype %}
     <input type="hidden" name="target_content_type_id" value="{{ ctype.pk }}">
   {% endwith %}
-  <input type='hidden' name = 'target_id' value='{{q.id}}' />
-  <input type='hidden' name = 'quest_id' value='{{q.id}}' />
+  <input type='hidden' name = 'target_id' value='{{target.id}}' />
   <input type='hidden' name = 'origin_path' value='{{request.get_full_path}}' />
   <input type='submit' class='btn btn-primary' value='Add comment' />
 </form>
@@ -33,7 +32,6 @@
           <form method="POST" action="{% url 'comments:create' %}">{% csrf_token %}
             {{ comment_form | crispy }}
             <input type='hidden' name='parent_id' value='{{comment.id}}'>
-            <input type='hidden' name = 'quest_id' value='{{q.id}}' />
             <input type='hidden' name = 'origin_path' value='{{comment.get_origin}}' />
             <input type='submit' class='btn btn-primary' value='Add reply' />
           </form>
