--- a/src/quest_manager/templates/quest_manager/detail.html
+++ b/src/quest_manager/templates/quest_manager/detail.html
@@ -27,7 +27,9 @@
     {% include "quest_manager/buttons.html" %}
   {% endwith %}
 
-  {% include "quest_manager/comments.html" %}
+  {% with q as target %}
+    {% include "quest_manager/comments.html" %}
+  {% endwith %}
 
 
 
