--- a/src/quest_manager/templates/quest_manager/buttons.html
+++ b/src/quest_manager/templates/quest_manager/buttons.html
@@ -3,9 +3,9 @@
     <a class="btn btn-info" href="{% url 'quests:quest_detail' q.id %}" role="button">View Details</a>
   {% endif %}
   {% if  request.user.is_staff %}
-    <a class="btn btn-danger" href="/admin/quest_manager/quest/{{q.id}}/delete/" role="button">Delete</a>
-    <a class="btn btn-primary" href="{% url 'quests:quest_update' q.id %}" role="button">Edit</a>
-    <a class="btn btn-warning" href="{% url 'quests:quest_copy' q.id %}" role="button">Copy</a>
+    <a class="btn btn-danger" href="{% url 'quests:quest_delete' q.id %}" role="button">Delete</a>
+    <a class="btn btn-warning" href="{% url 'quests:quest_update' q.id %}" role="button">Edit</a>
+    <a class="btn btn-primary" href="{% url 'quests:quest_copy' q.id %}" role="button">Copy</a>
   {% else %}
     <a class="btn btn-primary" href="{% url 'quests:start' q.id %}" role="button">Start Quest</a>
   {% endif %}
