--- a/src/quest_manager/templates/quest_manager/submission.html
+++ b/src/quest_manager/templates/quest_manager/submission.html
@@ -19,3 +19,12 @@
   {% endwith %}
 
 {% endblock %}
+
+{% block js %}
+<script>
+  $('.reply_btn').click(function(e){
+    e.preventDefault();
+    $(this).parent().nextAll('.reply_comment').slideToggle();
+  })
+</script>
+{% endblock %}
