--- a/src/static_in_project/static_root/css/custom.css
+++ b/src/static_in_project/static_root/css/custom.css
@@ -53,6 +53,10 @@ iframe {
   /*background-image: linear-gradient(to bottom, #D9534F 0px, #D43F3A 100%);*/
 }
 
+.quest-icon {
+  margin-right: 10px;
+}
+
 /************ SUMMERNOTE WIDGET **************/
 .summernotewidget {
   padding: 0px;
