--- a/src/quest_manager/templates/quest_manager/submission.html
+++ b/src/quest_manager/templates/quest_manager/submission.html
@@ -1,6 +1,12 @@
 {% extends "quest_manager/base.html" %}
 {% load crispy_forms_tags %}
 
+{% block head_css %}
+.reply_comment {
+  display: none;
+}
+{% endblock %}
+
 {% block heading_inner %}{{ heading }}{% endblock %}
 
 {% block content %}
