--- a/src/static_in_project/static_root/css/custom.css
+++ b/src/static_in_project/static_root/css/custom.css
@@ -65,6 +65,16 @@ iframe {
   border-bottom: none;
 }
 
+form .panel-body {
+  padding-top: 0px;
+}
+
+/*Doesn't reach inside the iframe*/
+/*.note-editor {
+  border-top: none;
+  border-right: none;
+  border-left: none;
+}*/
 
 
 /************ALERTS *************************/
@@ -198,10 +208,13 @@ already distinguished*/
   outline: 0;
 }
 
+/*to match other elements, taken from .list-group-item.active in bootstrap-theme.css*/
 .nav-tabs > .active > a {
-  background-color: #337AB7 !important;
-  border-color: #337AB7 !important;
   color: #FFF !important;
+  text-shadow: 0px -1px 0px #286090;
+  background-image: linear-gradient(to bottom, #337AB7 0px, #2B669A 100%);
+  background-repeat: repeat-x;
+  border-color: #2B669A !important;
 }
 
 .nav-tabs a {
