--- a/src/quest_manager/templates/quest_manager/comments.html
+++ b/src/quest_manager/templates/quest_manager/comments.html
@@ -10,6 +10,8 @@
   {% endwith %}
   <input type='hidden' name = 'target_id' value='{{target.id}}' />
   <input type='hidden' name = 'origin_path' value='{{request.get_full_path}}' />
+  <input type='hidden' name = 'success_url' value='{% url "quests:complete" submission.id %}' />
+  <input type='hidden' name = 'success_message' value='Your quest was successfully submitted.' />
   <div class="panel-body">
     <input type='submit' class='btn btn-primary' value='Submit Quest for Completion' />
     {% if not submission.is_completed %}
