Quest Approval view

--- a/src/static_in_project/static_root/css/custom.css
+++ b/src/static_in_project/static_root/css/custom.css
@@ -256,7 +256,7 @@ already distinguished*/
  padding-bottom: 10px;
 }*/
 
-#lg-menu a {
+#lg-menu a, #lg-menu-staff a {
   font-size: 125%;
   /*display:inline-block
   .text-overflow();*/
