--- a/src/templates/sidebar.html
+++ b/src/templates/sidebar.html
@@ -9,7 +9,7 @@
   </ul>
 
     <!--so logo margins align with main div headings-->
-   <h3 class="hidden-xs"> 
+   <h3 class="hidden-xs">
     <img id="logo" src ="{% static 'img/banner.png' %}"  class="img-responsive" alt="Timberline's Digital Hackerspace Logo" />
   </h3>
   <div class="nav list-group hidden-xs" id="lg-menu">
@@ -31,6 +31,14 @@
         <span id="announcements-badge" class="badge alert-danger list-group-item-badge "></span>
       </a>
   </div>
+
+  {% if request.user.is_staff %}
+  <div class="nav list-group hidden-xs" id="lg-menu-staff">
+      <a class="list-group-item {% if '/approvals/' in request.path_info %}active{% endif %}" href="{% url 'quests:approvals' %}">
+        <i class="fa fa-shield fa-fw"></i>&nbsp; Quest Approval
+      </a>
+  </div>
+  {% endif %}
 
     <!-- <ul class="list-unstyled hidden-xs" id="sidebar-footer">
         <li>
