--- a/src/templates/javascript.html
+++ b/src/templates/javascript.html
@@ -26,7 +26,7 @@
     <script>
 
     $(document).ready(function() {
-      //attempt to fix left menu
+      //attempt to fix left menu to top
       // $('#sidebar_menu').affix({
       //   offset: {
       //     top: 100,
